# irods_deployment_csir

./: README.md
microservices/: CMakeLists.txt
microservices/cmake/: proxy_user.cmake  set_avu.cmake
microservices/src/: libmsiproxy_user.cpp
policy/: CMakeLists.txt  README.md  administrative_metadata_access_control.re  collection_violation_report.r  default_resource_policy.re  irods_policy_collection_lifetime.re  irods_policy_logical_quotas.re  post_create_user.re  prevent_disabled_users.re  project_collection_creation.r  project_collection_lifetime.re  project_collection_violation_report.r
